<resources>
    <string name="app_name" translatable="false">MoviePic</string>
    <string name="cancel">Cancel</string>
    <string name="notImplementedYet">not implemented yet</string>
    <string name="loading">Loading</string>
    <string name="loadingLevelMsg">Getting frames…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>

    <string name="textLevel0">Pupular</string>
    <string name="textLevel1">Essential</string>
    <string name="textLevel2">Easy</string>
    <string name="textLevel3" translatable="false">Millennial</string>
    <string name="textLevel4" translatable="false">Boomer</string>

    <string name="help0">Swipe right to left through the list of frames</string>
    <string name="help1">Guess the full movie title based on the displayed frame</string>
    <string name="help2">It is not necessary to enter accents or punctuation marks in the answer</string>
    <string name="help3">It doesn\'t matter if the answer is in uppercase or lowercase</string>
    <string name="help4">Levels usually have 30 movies. You need to guess 20 movies before advancing to the next level</string>
    <string name="help5">The game is automatically saved on your device, this means that if the app data is deleted the progress will be lost</string>

    <string name="answerButtonDesc">answer FAB</string>
    <string name="answerTitle">Write the title</string>
    <string name="answerCheck">Check</string>
    <string name="answerFail">Wrong answer</string>
    <string name="answerOk">Correct answer</string>
    <string name="noAnswer">Write the title</string>
    <string name="wrongAnswer">Wrong answer</string>
    <string name="iconDescription">App Icon</string>
    <string name="levelNotAccesible1">Match</string>
    <string name="levelNotAccesible2">in the previous level</string>
    <string name="license">by Inoro\nGPL3 or later</string>
    <string name="levelFrameDescription">Frame number </string>
    <string name="textLevel5">B &amp; W</string>
    <string name="textLevel6" translatable="false">2019</string>
    <string name="notAvailable">Not available</string>
    <string name="introductoryText">Click on a level to start solving</string>
    <string name="frame">frame</string>
    <string name="helpTitle">Help</string>

    <string name="deleteProgressButton">Delete progress</string>
    <string name="resetProgressMsg">Are you sure you want to delete your progress?</string>
    <string name="resetProgressToast">Progress removed</string>
    <string name="nextLevelUnlocked">Next level unlocked!</string>
    <string name="levelCompleted">Level completed!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="helpButtonDesc">help</string>
</resources>