<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="0dp"
    android:minHeight="0dp"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/iconDescription"
        android:maxHeight="125dp"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="0dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/ButtonsTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/buttonLevel0"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center"
                android:minWidth="240dp"
                android:padding="25dp"
                android:text="@string/textLevel0"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/buttonLevel1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center"
                android:minWidth="120dp"
                android:padding="25dp"
                android:text="@string/textLevel1"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/buttonLevel2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="120dp"
                android:padding="25dp"
                android:text="@string/textLevel2"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonLevel3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="120dp"
                android:padding="25dp"
                android:text="@string/textLevel3"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/buttonLevel4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center"
                android:minWidth="240dp"
                android:text="@string/textLevel4"
                android:padding="25dp"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/license"
        android:textAlignment="center" />

</LinearLayout>
